Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5f2a0445469b022cc0115678-330.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZjJhMDQ1MTQ2OWIwMjJjYzAxMTU2NzkiLCJub21icmUiOiJUZXN0IDIiLCJlbWFpbCI6InRlc3QyQGdtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU5Njc2ODEyNSwiZXhwIjoxNTk2OTQwOTI1fQ.qsecaGmzYliQttOKmCzZkytzIt92io-zFYJOhXBP2r8"> -->
+
+    <!--Google-->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <script>
